# zotero-rag-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/research/: zotero-rag-landscape.md
src/rak/: __init__.py  bm25.py  chat.py  cli.py  config.py  embedder.py  errors.py  export.py  formatter.py  indexer.py  llm.py  mcp_server.py  metadata.py  pdf.py  registry.py  searcher.py  store.py
tests/: conftest.py  test_bm25.py  test_chat.py  test_cli.py  test_config.py  test_embedder.py  test_errors.py  test_export.py  test_formatter.py  test_indexer.py  test_indexer_provider.py  test_llm.py  test_mcp_server.py  test_metadata.py  test_pdf.py  test_registry.py  test_searcher.py  test_store.py
