[project]
name = "zotero-rag-cli"
version = "0.1.0"
description = "rak — Semantic search over your Zotero library"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "rich>=13.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
rak = "rak.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rak"]

[tool.pytest.ini_options]
testpaths = ["tests"]
