[project]
name = "zotero-rag-cli"
version = "0.7.4"
description = "rak — Semantic search over your Zotero library"
requires-python = ">=3.10"
license = "CC-BY-NC-4.0"
readme = "README.md"
authors = [
    { name = "Agents365-ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "click>=8.1",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "rich>=13.0",
    "PyMuPDF>=1.24",
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/Agents365-ai/zotero-rag-cli"
Repository = "https://github.com/Agents365-ai/zotero-rag-cli"
Issues = "https://github.com/Agents365-ai/zotero-rag-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
rak = "rak.cli:main"
rak-mcp = "rak.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rak"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests requiring network access (model downloads)",
]
